Add login, logout, register implementation